--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "osc52"
 version = "0.1.0"
 edition = "2021"
+description = "A simple client implemeting the OSC52 copy/paste protocol."
+readme = "README.md"
+repository = "https://github.com/NobodyNada/osc52"
+license = "GPL-3.0-only"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
